# FEDM

./: .gitignore  CITATION.cff  README.md  run_tests.sh  setup.cfg
Examples/glow_discharge/: README.md  fedm-gd.py
Examples/glow_discharge/file_input/4_particles/: reacscheme.cfg
Examples/glow_discharge/file_input/4_particles/species/: Ar_star.cfg
Examples/streamer_discharge/: README.md  fedm-streamer.py
Examples/time_of_flight/: README.md  fedm-tof.py
examples/glow_discharge/: fedm-gd.py
examples/glow_discharge/file_input/4_particles/species/: Ar_plus.cfg
examples/streamer_compare_stab/: fedm-streamer.py  fedm-streamer_Galerkin.py  fedm-streamer_Log.py  fedm-streamer_SUPG.py
examples/streamer_discharge/: README.md  fedm-streamer.py
examples/time_of_flight/: README.md  fedm-tof.py
examples/time_of_flight_1D/: fedm-tof_1d.py
fedm/: __init__.py  file_io.py  functions.py  utils.py
fedm_modules/: __init__.py  file_io.py  functions.py  physical_constants.py
tests/integrated_tests/: testing_utils.py
tests/integrated_tests/glow_discharge/: fedm-gd.py  fedm-gd_old.py  fedm_gd.py  test_glow_discharge.py
tests/integrated_tests/glow_discharge/20220707_results/: Ar_1p0.h5  Ar_plus.h5  Ar_star.h5  electrons.h5
tests/integrated_tests/streamer_discharge/: fedm-streamer.py  fedm_streamer.py  test_streamer_discharge.py
tests/integrated_tests/time_of_flight/: fedm_tof.py  test_time_of_flight.py
tests/integrated_tests/time_of_flight/20220707_results/: electrons000000.vtu
tests/unit_tests/functions/: test_modify_approximation_vars.py
(+5 files in other folders)
