[metadata]
name = FEDM
description = Finite Element electric Discharge Modelling code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AleksandarJ1984/FEDM
author = Aleksandar Jovanovic
author_email = aleksandar.jovanovic@inp.greifswald.de
license = LGPL
license_files = LICENSE
keywords = finite, element, FEniCS, electric, discharge
classifiers =
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Natural Language :: English
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Source = https://github.com/AleksandarJ1984/FEDM
    Tracker = https://github.com/AleksandarJ1984/FEDM/issues

[options]
packages = find:
include_package_data = True
install_requires =
    numpy >= 1.19
    pandas
    importlib-metadata; python_version >= "3.6"

[options.extras_require]
tests = 
    pytest
docs =
    sphinx == 3.5.4
    sphinx_rtd_theme

[build_sphinx]
source-dir = docs

[flake8]
max-line-length = 88
